fixed brand font displaying too big on smart phones via media queries, adjust icon toggler color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0px}
+    margin: 0px
 }
 
 .navbar {
@@ -7,14 +7,11 @@ body {
     background-color: #d3d3d3;
 }
 
-navbar-toggler-icon {
-    color: #2a9cbe;
-}
-
 .navbar-brand {
     font-size: 2em;
     font-family: 'Abril Fatface', cursive, sans-serif;
     padding: 0px;
+    margin: 0px;
 }
 
 .navbar-light .navbar-brand {
@@ -49,16 +46,38 @@ navbar-toggler-icon {
     border-bottom: 1px solid;
 }
 
-.jumbotron {
-height: 100vh;
-background-image: url(/workspace/gitpod-full-template/assets/images/blue-background-paint-cans.jpg);
-background-size: cover;
+.navbar-light .navbar-toggler-icon {
+    background-image:  url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(190,	150,	58, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
-.container-fluid {
-    padding: 0px;
+.navbar-light .navbar-toggler {
+    border: none;
+    background-color: transparent;
 }
 
-.col-12 {
-    padding: 0px
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 400px) {
+    .navbar-brand { font-size: 1.6em; }
 }
